--- a/Css/styleBocarella.css
+++ b/Css/styleBocarella.css
@@ -13,7 +13,7 @@ body {
 }
 
 h2 {
-  color: #fc9700;
+  color: rgb(227, 239, 179);
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
   font-weight: bold;
 }
