--- a/Css/headerandfooter.css
+++ b/Css/headerandfooter.css
@@ -9,29 +9,19 @@
 }
 
 /* =======================
-   SUBHEADER FIJO
+   SUBHEADER FIJO Y FLOTE
 ======================= */
 .subheader {
   position: fixed;
-  top: 0; 
+    top: 0; 
   left: 0;
   width: 100%;
   z-index: 999;
   background-color: rgb(0, 84, 4);
-  transition: top 0.5s ease-in-out; 
+  transition: top 0.5s ease-in-out;
 }
 
-.subheader .nav-link {
-  margin-right: 15px;
-}
-
-.subheader .d-flex.align-items-center {
-  margin-left: auto;
-}
-
-/* =======================
-   LINKS HEADER Y SUBHEADER
-======================= */
+/* LINKS HEADER Y SUBHEADER */
 .headerID .nav-link,
 .subheader .nav-link {
   color: #ffffff;
@@ -44,25 +34,33 @@
   text-decoration: underline;
 }
 
-/* =======================
-   DROPDOWNS
-======================= */
+/* DROPDOWNS */
 .navbar-nav .dropdown-menu {
-  position: absolute;     
-  top: 100%;              
-  right: 0;              
-  z-index: 1050;          
+  position: absolute;
+  top: 100%;
+  right: 0;
+  z-index: 1050;
 }
 
 .navbar-nav .nav-item.dropdown {
-  position: relative;     
+  position: relative;
 }
 
-/* =======================
-   FOOTER
-======================= */
+/* SUBHEADER RESPONSIVE VERTICAL */
+@media (max-width: 992px) {
+  #subNavContent .navbar-nav {
+    flex-direction: column; /* vertical */
+    text-align: center;
+  }
+
+  #subNavContent .nav-item {
+    margin-bottom: 10px;
+  }
+}
+
+/* FOOTER */
 .footer1id {
-  background-color: rgb(227, 239, 179); 
+  background-color: rgb(227, 239, 179);
   color: #333;
   padding: 20px 0;
   text-align: center;
@@ -75,6 +73,6 @@
 }
 
 .footer1id a:hover {
-  color: rgb(0, 104, 5); 
+  color: rgb(0, 104, 5);
   text-decoration: underline;
 }
