--- a/Css/headerandfooter.css
+++ b/Css/headerandfooter.css
@@ -1,6 +1,3 @@
-/* =======================
-   HEADER PRINCIPAL
-======================= */
 .headerID {
   background-color: rgb(0, 104, 5);
   color: white;
@@ -8,20 +5,11 @@
   z-index: 1000;
 }
 
-/* =======================
-   SUBHEADER FIJO Y FLOTE
-======================= */
 .subheader {
-  position: fixed;
-    top: 0; 
-  left: 0;
-  width: 100%;
-  z-index: 999;
   background-color: rgb(0, 84, 4);
-  transition: top 0.5s ease-in-out;
+  transition: top 0.1s ease;
 }
 
-/* LINKS HEADER Y SUBHEADER */
 .headerID .nav-link,
 .subheader .nav-link {
   color: #ffffff;
@@ -34,7 +22,6 @@
   text-decoration: underline;
 }
 
-/* DROPDOWNS */
 .navbar-nav .dropdown-menu {
   position: absolute;
   top: 100%;
@@ -46,10 +33,9 @@
   position: relative;
 }
 
-/* SUBHEADER RESPONSIVE VERTICAL */
 @media (max-width: 992px) {
   #subNavContent .navbar-nav {
-    flex-direction: column; /* vertical */
+    flex-direction: column;
     text-align: center;
   }
 
@@ -58,7 +44,6 @@
   }
 }
 
-/* FOOTER */
 .footer1id {
   background-color: rgb(227, 239, 179);
   color: #333;
